# rust_graphql_sample

./: Cargo.toml  Dockerfile  README.md
migrations/2020-03-15-163543_create_myusers/: up.sql
src/: gql.rs  gql_types.rs  main.rs  models.rs  schema.rs
