[package]
name = "rust_graphql_sample"
version = "0.1.0"
authors = ["Ben Sampson <bensampsondev@gmail.com>"]
edition = "2020"

[dependencies]
warp= "0.1.13"
log = "0.4"
pretty_env_logger = "0.3"
juniper = "0.11.1"
diesel = { version = "1.4.1", features = [ "postgres", "chrono" ] }
dotenv = "0.13.0"
chrono = "0.4.6"
serde_json = "1.0.38"
serde_derive = "1.0.88"
failure = "0.1.5"
futures = "0.1.25"
serde = "1.0.88"
tokio-threadpool = "0.1.11"
bcrypt = "0.3.0"
jsonwebtoken = "5.0.1"
